optimization, local jQuery, better viewport scaling

--- a/templates/full.html
+++ b/templates/full.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>msgr</title>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="jquery-3.6.0.min.js"></script>
       <script>
         var autoScrollEnabled = true;
         document.addEventListener('keydown', function(event) {
@@ -53,52 +53,7 @@
             });
         });
     </script>
-    <style>
-        body {
-            background-color: #1C2333;
-            overflow-x:wrap;
-        }
-        #messages{
-            color: white;
-            margin-top:8.17em;
-            color: #F5F9FC;
-            word-break:break-all;
-        }
-        #TimeWarning {
-          color:#ff0000;
-        }
-        h3, h4, #TimeWarning, #HowToDeleteMessages {
-        }
-        .TW {
-          color:red;
-          font-weight:bold;
-        }
-        .HTDM {
-          color: #A18A1A;
-          font-size:1.17em;
-          font-weight:bolder;
-        }
-        .info {
-          background-color: #3C445C;
-          color: #CCD1D9;
-          font-weight: bold;
-          border-radius:5px;
-        }
-        header {
-          position: fixed;
-          top: 0;
-          left: 0;
-          width: 100%;
-          background-color: #1C2333;
-          z-index: 9999;
-          margin-bottom:0px;
-          color:white;
-          font-size: calc(1vw + calc(130% - 20px));
-        }
-        a {
-          color:blue
-        }
-    </style>
+    <style>body{background-color:#1C2333;overflow-x:wrap}#messages{color:#fff;margin-top:8.17em;color:#F5F9FC;word-break:break-all}#TimeWarning{color:red}.TW{color:red;font-weight:700}.HTDM{color:#A18A1A;font-size:1.17em;font-weight:bolder}.info{background-color:#3C445C;color:#CCD1D9;font-weight:700;border-radius:5px}header{position:fixed;top:0;left:0;width:100%;background-color:#1C2333;z-index:9999;margin-bottom:0;color:#fff;font-size:calc(1vw +)calc(130% - 20px))}a{color:blue}</style>
 </head>
 <body>
 <center>
