--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-<meta content="msgr" property="og:title" />
+    <meta content="msgr" property="og:title" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="msgr is a simple chatting website" property="og:description" />
     <meta content="https://msgr.gabrielzv1233.repl.co" property="og:url" />
     <meta content="https://msgr.gabrielzv1233.repl.co/favicon.png" property="og:image" />
