--- a/templates/404.html
+++ b/templates/404.html
@@ -1,3 +1,20 @@
+<html>
+  <head>
+    <meta content="msgr" property="og:title" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content="msgr is a simple chatting website" property="og:description" />
+    <meta content="https://msgr.gabrielzv1233.repl.co" property="og:url" />
+    <meta content="https://msgr.gabrielzv1233.repl.co/favicon.png" property="og:image" />
+    <meta content="#0E1525" data-react-helmet="true" name="theme-color" />
+    <meta name="keywords" content="english, texting, text, chatroom, python, chatting, multiplayer">
+    <meta name="author" content="Gabrielzv1233">
+    <meta charset="UTF-8">
+    <!-- link rel="icon" href="https://msgr.gabrielzv1233.repl.co/favicon.png" -->
+    <title>404 Page Not Found</title>
+  </head>
+<body>
 <h1>Page not found</h1>
 <p>This page dose not exist, please check the url</p>
 <a href="/">main page</a>&emsp;<a href="/full">fullscreen</a>&emsp;<a href="send.html">Fullscreen sender</a>&emsp;<a href="info">info</a>
+</body>
+</html>
