--- a/templates/anti-spam.html
+++ b/templates/anti-spam.html
@@ -1,6 +1,22 @@
+<html>
+<head>
+    <meta content="msgr" property="og:title" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content="msgr is a simple chatting website" property="og:description" />
+    <meta content="https://msgr.gabrielzv1233.repl.co" property="og:url" />
+    <meta content="https://msgr.gabrielzv1233.repl.co/favicon.png" property="og:image" />
+    <meta content="#0E1525" data-react-helmet="true" name="theme-color" />
+    <meta name="keywords" content="english, texting, text, chatroom, python, chatting, multiplayer">
+    <meta name="author" content="Gabrielzv1233">
+    <meta charset="UTF-8">
+    <!-- link rel="icon" href="https://msgr.gabrielzv1233.repl.co/favicon.png" -->
+</head>
+  <body>
   <script>
     setTimeout(function() {
       window.location.href = "/send.html";
     }, 1000);
   </script>
   <h1>Action not allowed: sending the same message more than once</h1>
+</body>
+</html>
