--- a/templates/full.html
+++ b/templates/full.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta content="msgr" property="og:title" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content="msgr is a simple chatting website" property="og:description" />
+    <meta content="https://msgr.gabrielzv1233.net" property="og:url" />
+    <meta content="https://msgr.gabrielzv1233.net/favicon.png" property="og:image" />
+    <meta content="#0E1525" data-react-helmet="true" name="theme-color" />
+    <meta name="keywords" content="english, texting, text, chatroom, python, chatting, multiplayer">
+    <meta name="author" content="Gabrielzv1233">
+    <meta charset="UTF-8">
+    <!-- link rel="icon" href="https://msgr.gabrielzv1233.net/favicon.png" -->
     <title>msgr</title>
     <script src="jquery-3.6.0.min.js"></script>
       <script>
@@ -53,7 +63,7 @@
             });
         });
     </script>
-    <style>body{background-color:#1C2333;overflow-x:wrap}#messages{color:#fff;margin-top:8.17em;color:#F5F9FC;word-break:break-all}#TimeWarning{color:red}.TW{color:red;font-weight:700}.HTDM{color:#A18A1A;font-size:1.17em;font-weight:bolder}.info{background-color:#3C445C;color:#CCD1D9;font-weight:700;border-radius:5px}header{position:fixed;top:0;left:0;width:100%;background-color:#1C2333;z-index:9999;margin-bottom:0;color:#fff;font-size:calc(1vw +)calc(130% - 20px))}a{color:blue}</style>
+    <style>body{background-color:#1C2333;overflow-x:wrap}#messages{color:#fff;margin-top:9em;color:#F5F9FC;word-break:break-all}#TimeWarning{color:red}.TW{color:red;font-weight:700}.HTDM{color:#A18A1A;font-size:1.17em;font-weight:bolder}.info{background-color:#3C445C;color:#CCD1D9;font-weight:700;border-radius:5px}header{position:fixed;top:0;left:0;width:100%;background-color:#1C2333;z-index:9999;margin-bottom:0;color:#fff;font-size:calc(1vw +)calc(130% - 20px))}a{color:blue}</style>
 </head>
 <body>
 <center>
