--- a/templates/get_UUID.html
+++ b/templates/get_UUID.html
@@ -1,3 +1,18 @@
+<html>
+<head>
+    <meta content="msgr" property="og:title" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content="msgr is a simple chatting website" property="og:description" />
+    <meta content="https://msgr.gabrielzv1233.net" property="og:url" />
+    <meta content="https://msgr.gabrielzv1233.net/favicon.png" property="og:image" />
+    <meta content="#0E1525" data-react-helmet="true" name="theme-color" />
+    <meta name="keywords" content="english, texting, text, chatroom, python, chatting, multiplayer">
+    <meta name="author" content="Gabrielzv1233">
+    <meta charset="UTF-8">
+    <!-- link rel="icon" href="https://msgr.gabrielzv1233.net/favicon.png" -->
+  <title>Get UUID</title>
+</head>
+<body>
 your UUID is: <input id="UUID" type="text" readonly value="{{UUID}}" size="24"> <button onclick="copy()">Copy</button>
     <script>
         function copy() {
@@ -8,3 +23,5 @@ your UUID is: <input id="UUID" type="text" readonly value="{{UUID}}" size="24"> 
             document.execCommand("copy");
         }
     </script>
+</body>
+</html>
