--- a/templates/send.html
+++ b/templates/send.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <script>
+        if (window.location.hostname === 'msgr.gabrielzv1233.repl.co') {
+  window.location.href = 'http://msgr.gabrielzv1233.net/send.html';
+      }
+    </script>
+    <meta content="msgr" property="og:title" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content="msgr is a simple chatting website" property="og:description" />
+    <meta content="https://msgr.gabrielzv1233.net" property="og:url" />
+    <meta content="https://msgr.gabrielzv1233.net/favicon.png" property="og:image" />
+    <meta content="#0E1525" data-react-helmet="true" name="theme-color" />
+    <meta name="keywords" content="english, texting, text, chatroom, python, chatting, multiplayer">
+    <meta name="author" content="Gabrielzv1233">
+    <meta charset="UTF-8">
+    <!-- link rel="icon" href="https://msgr.gabrielzv1233.net/favicon.png" -->
     <title>Message Sender</title>
 <style>body{background-color:#1C2333}label{color:#f5f9fc}.um{border-radius:4px;outline:0;border:1px #000;background-color:#3C445C;color:#CCD1D9;font-weight:700}</style>
 </head>
