--- a/templates/500.html
+++ b/templates/500.html
@@ -1,3 +1,19 @@
+<head>
+    <meta content="msgr" property="og:title" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content="msgr is a simple chatting website" property="og:description" />
+    <meta content="https://msgr.gabrielzv1233.repl.co" property="og:url" />
+    <meta content="https://msgr.gabrielzv1233.repl.co/favicon.png" property="og:image" />
+    <meta content="#0E1525" data-react-helmet="true" name="theme-color" />
+    <meta name="keywords" content="english, texting, text, chatroom, python, chatting, multiplayer">
+    <meta name="author" content="Gabrielzv1233">
+    <meta charset="UTF-8">
+    <!-- link rel="icon" href="https://msgr.gabrielzv1233.repl.co/favicon.png" -->
+  <title>Something Went Wrong Serverside</title>
+</head>
+<body>
 <h1>Error code 500:</h1>
 <h2>Somthing went wrong server side</h2>
 <b>server may be under develop ment and somthing broke please try again later, sorry for the inconvenience</b>
+</body>
+</html>
