--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,20 @@
 <html>
 <head>
+    <script>
+        if (window.location.hostname === 'msgr.gabrielzv1233.repl.co') {
+  window.location.href = 'http://msgr.gabrielzv1233.net';
+      }
+    </script>
     <meta content="msgr" property="og:title" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="msgr is a simple chatting website" property="og:description" />
-    <meta content="https://msgr.gabrielzv1233.repl.co" property="og:url" />
-    <meta content="https://msgr.gabrielzv1233.repl.co/favicon.png" property="og:image" />
+    <meta content="https://msgr.gabrielzv1233.net" property="og:url" />
+    <meta content="https://msgr.gabrielzv1233.net/favicon.png" property="og:image" />
     <meta content="#0E1525" data-react-helmet="true" name="theme-color" />
     <meta name="keywords" content="english, texting, text, chatroom, python, chatting, multiplayer">
     <meta name="author" content="Gabrielzv1233">
     <meta charset="UTF-8">
-    <!-- link rel="icon" href="https://msgr.gabrielzv1233.repl.co/favicon.png" -->
+    <!-- link rel="icon" href="https://msgr.gabrielzv1233.net/favicon.png" -->
     <title>msgr</title>
   <style>
     iframe {
@@ -31,7 +36,7 @@
 </head>
 <body style="margin:0px;;bottom:0px;">
 <iframe id="full" src="/full"></iframe>
-<iframe id="send" src="/send.html"></iframe>
+<iframe id="send" src="https://msgr.gabrielzv1233.net/send.html"></iframe>
 
 <script>
     window.addEventListener('beforeunload', function() {
