--- a/templates/info.html
+++ b/templates/info.html
@@ -1,12 +1,14 @@
 <head>
-<meta content="msgr" property="og:title" />
+    <meta content="msgr" property="og:title" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="msgr is a simple chatting website" property="og:description" />
-    <meta content="https://msgr.gabrielzv1233.repl.co" property="og:url" />
-    <meta content="https://msgr.gabrielzv1233.repl.co/favicon" property="og:image" />
+    <meta content="https://msgr.gabrielzv1233.net" property="og:url" />
+    <meta content="https://msgr.gabrielzv1233.net/favicon.png" property="og:image" />
     <meta content="#0E1525" data-react-helmet="true" name="theme-color" />
     <meta name="keywords" content="english, texting, text, chatroom, python, chatting, multiplayer">
     <meta name="author" content="Gabrielzv1233">
     <meta charset="UTF-8">
+    <!-- link rel="icon" href="https://msgr.gabrielzv1233.net/favicon.png" -->
     <title>msgr - info</title>
 </head>
 <body>
