--- a/templates/send.html
+++ b/templates/send.html
@@ -3,8 +3,8 @@
 <head>
     <script>
         if (window.location.hostname === 'msgr.gabrielzv1233.repl.co') {
-  window.location.href = 'http://msgr.gabrielzv1233.net/send.html';
-      }
+            window.location.href = 'http://msgr.gabrielzv1233.net/send.html';
+        }
     </script>
     <meta content="msgr" property="og:title" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,7 +17,7 @@
     <meta charset="UTF-8">
     <!-- link rel="icon" href="https://msgr.gabrielzv1233.net/favicon.png" -->
     <title>Message Sender</title>
-<style>body{background-color:#1C2333}label{color:#f5f9fc}.um{border-radius:4px;outline:0;border:1px #000;background-color:#3C445C;color:#CCD1D9;font-weight:700}</style>
+    <style>body{background-color:#1C2333}label{color:#f5f9fc}.um{border-radius:4px;outline:0;border:1px #000;background-color:#3C445C;color:#CCD1D9;font-weight:700}</style>
 </head>
 <body style="margin:0px;overflow:hidden;">
 <center>
@@ -35,7 +35,15 @@
     </form>
 </center>
 <script>
-function generateUUID(){return"xxxxxxxx-xxxx-xxxx-yxxx-xxxxxxxxxxxx".replace(/[xy]/g,function(e){var n=16*Math.random()|0;return("x"===e?n:3&n|8).toString(16)})}function getCookie(e){for(var n=e+"=",t=decodeURIComponent(document.cookie).split(";"),r=0;r<t.length;r++){for(var a=t[r];" "==a.charAt(0);)a=a.substring(1);if(0==a.indexOf(n))return a.substring(n.length,a.length)}return""}if(!document.cookie.includes("fingerprint")){var e=generateUUID();document.cookie="fingerprint="+e+"; SameSite=None; Secure; path=/"}var messageField=document.getElementById("message");function saveUsername(){setCookie("username",document.getElementById("username").value,1)}function removeUnloadEvent(){window.removeEventListener("beforeunload",handleBeforeUnload)}function handleBeforeUnload(e){""!==messageField.value.trim()&&(e.preventDefault(),e.returnValue="")}function setCookie(e,n,t){var r=new Date;r.setTime(r.getTime()+864e5*t);var a="expires="+r.toUTCString();document.cookie=e+"="+n+"; "+a+"; path=/"}window.onload=function(){var e=getCookie("username");e&&(document.getElementById("username").value=e)},window.addEventListener("message",function(e){"saveUsername"===e.data&&saveUsername()}),window.addEventListener("beforeunload",handleBeforeUnload);
+function generateUUID(){return"xxxxxxxx-xxxx-xxxx-yxxx-xxxxxxxxxxxx".replace(/[xy]/g,function(e){var n=16*Math.random()|0
+  return("x"===e?n:3&n|8).toString(16)})}function getCookie(e){for(var n=e+"=",t=decodeURIComponent(document.cookie).split(";"),o=0;o<t.length;o++){for(var r=t[o];" "==r.charAt(0);)r=r.substring(1)
+  if(0==r.indexOf(n))return r.substring(n.length,r.length)}return""}function saveUsername(){setCookie("username",document.getElementById("username").value,365)}function removeUnloadEvent(){window.removeEventListener("beforeunload",handleBeforeUnload)}function handleBeforeUnload(e){""!==messageField.value.trim()&&(e.preventDefault(),e.returnValue="")}function setCookie(e,n,t){var o=new Date
+  o.setTime(o.getTime()+864e5*t)
+  var r="expires="+o.toUTCString()
+  document.cookie=e+"="+n+"; "+r+"; path=/"}if(!document.cookie.includes("fingerprint")){var e=generateUUID()
+  document.cookie="fingerprint="+e+"; SameSite=None; Secure; path=/"}var messageField=document.getElementById("message")
+  window.onload=function(){var e=getCookie("username")
+  e&&(document.getElementById("username").value=e)},window.addEventListener("message",function(e){"saveUsername"===e.data&&saveUsername()}),window.addEventListener("beforeunload",handleBeforeUnload)
 </script>
 </body>
 </html>
